--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,18 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body{
+    background: #898B87;
+}
+h1{
+    font-size: 3rem;
+    color: white;
+}
+span{
+    font-size: 4rem;
+    font-weight: bold;
+}
+.container{
+    border: solid 1rem black;
+
+}
